João trocado para Luan

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </thead>
         <tbody>
             <tr>
-                <td>João</td>
+                <td>Luan</td>
                 <td>25</td>
                 <td>Sou estudante</td>
             </tr>
